Fix navbar and search on mobile

--- a/src/functional_components/DropdownMenu/DropdownMenu.module.scss
+++ b/src/functional_components/DropdownMenu/DropdownMenu.module.scss
@@ -79,6 +79,7 @@
     .container {
         top: 0px;
         position: initial;
+        padding: initial;
     }
 
     .iconWrapper {
