--- a/src/functional_components/File/File.module.scss
+++ b/src/functional_components/File/File.module.scss
@@ -19,7 +19,7 @@
 .fileType {
     z-index: 2;
     position: absolute;
-    top: 50%;
+    top: 25%;
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
     font-weight: 300;
